--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,10 @@ on:
 
 env:
   IMAGE_REGISTRY: "ghcr.io"
-  IMAGE_REPO: "${{ github.repository_owner }}/kubespray"
+  REGISTRY_USER: "${{ github.repository_owner }}"
+  REGISTRY_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+  IMAGE_REPO: "ghcr.io/${{ github.repository_owner }}/kubespray"
+  BASE_IMAGE_REPO: "ghcr.io/${{ github.repository_owner }}/kubespray-base"
 
 jobs:
   build:
@@ -20,6 +23,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
+          # fetch all git repo tag for define image tag
           fetch-depth: 0
 
       - name: Set up QEMU
@@ -39,30 +43,61 @@ jobs:
       - name: Log in to GitHub Docker Registry
         uses: docker/login-action@v1
         with:
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
           registry: ${{ env.IMAGE_REGISTRY }}
+          username: ${{ env.REGISTRY_USER }}
+          password: ${{ env.REGISTRY_TOKEN }}
 
-      - name: Define image tags by current git repo tag and branch
+      - name: Prepare for build images
         shell: bash
         run: |
           git describe --tags --always | sed 's/^/IMAGE_TAG=/' >> $GITHUB_ENV
-          git branch --show-current | sed 's/master/latest/;s/release-//;s/^/IMAGE_TAG_BY_BRANCH=/' >> $GITHUB_ENV
+          git branch --show-current | sed 's/^/BRANCH_NAME=/' >> $GITHUB_ENV
+          git branch --show-current | sed 's/master/latest/;s/^/IMAGE_TAG_BY_BRANCH=/' >> $GITHUB_ENV
+          sed -n 's/^kube_version: /KUBE_VERSION=/p' roles/kubespray-defaults/defaults/main.yaml >> $GITHUB_ENV
+          cat build/kubespray-base/Dockerfile requirements.txt tests/requirements.txt \
+          | md5sum | tr -d '\ -' | sed 's/^/BASE_MD5=md5-/' >> $GITHUB_ENV
 
-      - name: Build and push images
+          source $GITHUB_ENV
+          if skopeo inspect docker://${BASE_IMAGE_REPO}:${BRANCH_NAME} > mainfest.json; then
+            jq -r '.Labels.BASE_MD5' mainfest.json | sed 's/^/LATEST_BASE_MD5=/' >> $GITHUB_ENV
+          else
+            echo 'LATEST_BASE_MD5=null' >> $GITHUB_ENV
+          fi
+
+      - name: Build and push kubespray-base images
+        uses: docker/build-push-action@v2
+        if: ${{ env.BASE_MD5 != env.LATEST_BASE_MD5 }}
+        with:
+          push: true
+          context: .
+          file: build/kubespray-base/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+          build-args: KUBE_VERSION=${{ env.KUBE_VERSION }}
+          labels: BASE_MD5=${{ env.BASE_MD5 }}
+          tags: |
+            ${{ env.BASE_IMAGE_REPO }}:${{ env.IMAGE_TAG }}
+            ${{ env.BASE_IMAGE_REPO }}:${{ env.BASE_MD5 }}
+            ${{ env.BASE_IMAGE_REPO }}:${{ env.BRANCH_NAME }}
+
+      - name: Move new cache
+        if: ${{ env.BASE_MD5 != env.LATEST_BASE_MD5 }}
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+      - name: Build and push kubespray images
         uses: docker/build-push-action@v2
         with:
           push: true
           context: .
-          file: Dockerfile.slim
+          file: build/kubespray/Dockerfile
           platforms: linux/amd64,linux/arm64
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+          build-args: |
+            BASE_IMAGE_VERSION=${{ env.BASE_MD5 }}
+            BASE_IMAGE=${{ env.BASE_IMAGE_REPO }}
           tags: |
-            ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG_BY_BRANCH }}
-            ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }}
-
-      - name: Move new cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+            ${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }}
+            ${{ env.IMAGE_REPO }}:${{ env.BRANCH_NAME }}
+            ${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG_BY_BRANCH }}
