--- a/config/inventory.ini
+++ b/config/inventory.ini
@@ -1,34 +1,34 @@
-# ## Configure 'ip' variable to bind kubernetes services on a
-# ## different ip than the default iface
-# ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
-[all]
-# node1 ansible_host=95.54.0.12  # ip=10.3.0.1 etcd_member_name=etcd1
-# node2 ansible_host=95.54.0.13  # ip=10.3.0.2 etcd_member_name=etcd2
-# node3 ansible_host=95.54.0.14  # ip=10.3.0.3 etcd_member_name=etcd3
-# node4 ansible_host=95.54.0.15  # ip=10.3.0.4 etcd_member_name=etcd4
-# node5 ansible_host=95.54.0.16  # ip=10.3.0.5 etcd_member_name=etcd5
-# node6 ansible_host=95.54.0.17  # ip=10.3.0.6 etcd_member_name=etcd6
+[all:vars]
+ansible_port=22
+ansible_user=root
+ansible_ssh_pass=Password
+#ansible_ssh_private_key_file=/kubespray/config/id_rsa
 
-# ## configure a bastion host if your nodes are not directly reachable
-# [bastion]
-# bastion ansible_host=x.x.x.x ansible_user=some_user
+[all]
+kube-control-01 ansible_host=172.20.0.31
+kube-control-02 ansible_host=172.20.0.33
+kube-control-03 ansible_host=172.20.0.32
+kube-node-01 ansible_host=172.20.0.34
+
+[bastion]
+# bastion-01 ansible_host=x.x.x.x ansible_user=some_user
 
 [kube_control_plane]
-# node1
-# node2
-# node3
+kube-control-01
+kube-control-02
+kube-control-03
 
 [etcd]
-# node1
-# node2
-# node3
+kube-control-01
+kube-control-02
+kube-control-03
+
 
 [kube_node]
-# node2
-# node3
-# node4
-# node5
-# node6
+kube-control-01
+kube-control-02
+kube-control-03
+kube-node-01
 
 [calico_rr]
 
