chore(*): update download.yml version and fix image list typo

--- a/config/group_vars/all/download.yml
+++ b/config/group_vars/all/download.yml
@@ -6,8 +6,8 @@ calico_version: "v3.18.4"
 flannel_version: "v0.14.0"
 pod_infra_version: "3.3"
 nginx_image_version: "1.19"
-dnsautoscaler_version: "1.8.1"
-coredns_version: "1.7.0"
+dnsautoscaler_version: "1.8.3"
+coredns_version: "1.8.0"
 cni_version: "v0.9.1"
 helm_version: "v3.6.3"
 nerdctl_version: "0.8.1"
@@ -52,9 +52,13 @@ kube_scheduler_image_repo: "{{ kube_image_repo }}/kube-scheduler"
 kube_controller_manager_image_repo: "{{ kube_image_repo }}/kube-controller-manager"
 
 calico_node_image_repo: "{{ docker_image_repo }}/calico-node"
+calico_node_image_tag: "{{ calico_version }}{%- if image_arch != 'amd64' -%}-{{ image_arch }}{%- endif -%}"
 calico_cni_image_repo: "{{ docker_image_repo }}/calico-cni"
+calico_cni_image_tag: "{{ calico_cni_version }}{%- if image_arch != 'amd64' -%}-{{ image_arch }}{%- endif -%}"
 calico_policy_image_repo: "{{ docker_image_repo }}/calico-kube-controllers"
-calico_policy_image_tag: "{{ calico_policy_version }}"
+calico_policy_image_tag: "{{ calico_policy_version }}{%- if image_arch != 'amd64' -%}-{{ image_arch }}{%- endif -%}"
+calico_typha_image_repo: "{{ quay_image_repo }}/calico-typha"
+calico_typha_image_tag: "{{ calico_typha_version }}{%- if image_arch != 'amd64' -%}-{{ image_arch }}{%- endif -%}"
 
 flannel_image_repo: "{{ quay_image_repo }}/flannel"
 flannel_image_tag: "{{ flannel_version }}-{{ image_arch }}"
