chore(*): add kubespray-images build workflow

--- a/config/group_vars/all/download.yml
+++ b/config/group_vars/all/download.yml
@@ -7,7 +7,7 @@ flannel_version: "v0.14.0"
 pod_infra_version: "3.3"
 nginx_image_version: "1.19"
 dnsautoscaler_version: "1.8.3"
-coredns_version: "1.8.0"
+coredns_version: "v1.8.0"
 cni_version: "v0.9.1"
 helm_version: "v3.6.3"
 nerdctl_version: "0.8.1"
