chore(*): add main branch in workflow trigger event

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ name: Build kubespray images
 
 on:
   push:
-    branches: [master, release-*]
+    branches: [main, master, release-*]
     paths-ignore:
       - 'docs/**'
     tag:
