chore(*): fix calico image repo typo and disable nodelocaldns

--- a/config/env.yml
+++ b/config/env.yml
@@ -17,5 +17,4 @@ etcd_events_cluster_enabled: true
 
 registry_ip: "172.20.0.25"
 registry_domain: "kube.registry.local"
-file_server_url: "http://172.20.0.25:8080"
-docker_mirrors_url: "https://mirrors.tuna.tsinghua.edu.cn/docker-ce/linux"
+offline_resources_url: "http://172.20.0.25:8080"
