--- a/config/group_vars/all/download.yml
+++ b/config/group_vars/all/download.yml
@@ -59,6 +59,8 @@ calico_policy_image_repo: "{{ docker_image_repo }}/calico-kube-controllers"
 calico_policy_image_tag: "{{ calico_policy_version }}{%- if image_arch != 'amd64' -%}-{{ image_arch }}{%- endif -%}"
 calico_typha_image_repo: "{{ quay_image_repo }}/calico-typha"
 calico_typha_image_tag: "{{ calico_typha_version }}{%- if image_arch != 'amd64' -%}-{{ image_arch }}{%- endif -%}"
+calico_flexvol_image_repo: "{{ quay_image_repo }}/calico-pod2daemon-flexvol"
+calico_flexvol_image_tag: "{{ calico_flexvol_version }}{%- if image_arch != 'amd64' -%}-{{ image_arch }}{%- endif -%}"
 
 flannel_image_repo: "{{ quay_image_repo }}/flannel"
 flannel_image_tag: "{{ flannel_version }}-{{ image_arch }}"
@@ -83,4 +85,5 @@ pod_infra_image_name: "{{ pod_infra_image_repo }}:{{ pod_infra_image_tag }}"
 calico_policy_image_name: "{{ calico_policy_image_repo }}:{{ calico_policy_image_tag }}"
 calico_cni_image_name: "{{ calico_cni_image_repo }}:{{ calico_cni_image_tag }}"
 calico_node_image_name: "{{ calico_node_image_repo }}:{{ calico_node_image_tag }}"
+calico_flexvol_image_name: "{{ calico_flexvol_image_repo }}:{{ calico_flexvol_image_tag }}"
 flannel_image_name: "{{ flannel_image_repo }}:{{ flannel_image_tag }}"
