--- a/roles/cluster/bootstrap-os/tasks/01-offline-resources.yml
+++ b/roles/cluster/bootstrap-os/tasks/01-offline-resources.yml
@@ -1,52 +1,25 @@
 ---
-- name: Fetch /etc/os-release
-  raw: cat /etc/os-release
-  register: os_release
-  changed_when: false
-  # This command should always run, even in check mode
-  check_mode: false
-
-- name: Create remote_tmp for it is used by another module
-  file:
-    path: "{{ ansible_remote_tmp | default('~/.ansible/tmp') }}"
-    state: directory
-    mode: 0700
-
 ## (1/3) Config offline resources yum and apt repository
-# Config centos yum repository
-- name: Config centos offline resources yum repository
-  get_url:
-    url: "{{ offline_resources_url }}/repos/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}-All-in-One.repo"
-    dest: /etc/yum.repos.d/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}-All-in-One.repo
-  when: '''ID="centos"'' in os_release.stdout_lines'
+- name: Configure offline resources repository on apt package manager
+  template:
+    src: "apt_offline_resources.list.j2"
+    dest: "{{ apt_repo_dir }}/offline-resources.list"
+    mode: 0644
+  when: ansible_pkg_mgr == 'apt'
 
-- name: Update offline resources ip address
-  replace:
-    path: "/etc/yum.repos.d/{{ ansible_distribution|lower  }}{{ ansible_distribution_major_version|lower }}-All-in-One.repo"
-    regexp: 'http://127.0.0.1:8080'
-    replace: "{{ offline_resources_url }}"
-  when: '''ID="centos"'' in os_release.stdout_lines'
-
-- name: Yum update repository cache
-  shell: |
-    yum clean all && yum makecache
-  when: '''ID="centos"'' in os_release.stdout_lines'
-
-# Config debian/ubuntu apt repository
-- name: Hosts | populate registry domain into hosts file
-  blockinfile:
-    path: /etc/apt/sources.list.d/{{ ansible_distribution|lower }}-{{ ansible_distribution_release|lower }}-All-in-One.list
-    block: "deb [trusted=yes] {{ offline_resources_url }}/{{ ansible_distribution|lower }}/{{ image_arch }} {{ ansible_distribution_release|lower }}/"
-    state: present
-    create: yes
-    backup: yes
-    unsafe_writes: yes
-  when: '''ID=debian'' in os_release.stdout_lines or ''ID=ubuntu'' in os_release.stdout_lines'
+- name: Configure offline resources repository on yum package manager
+  template:
+    src: "yum_offline_resources.repo.j2"
+    dest: "{{ yum_repo_dir }}/offline-resources.repo"
+    mode: 0644
+  when:
+    - ansible_pkg_mgr == 'yum'
+    - ansible_os_family == "RedHat"
 
 - name: Update apt repository cache
   apt:
     update_cache: yes
-  when: '''ID=debian'' in os_release.stdout_lines or ''ID=ubuntu'' in os_release.stdout_lines'
+  when: ansible_pkg_mgr == 'apt'
 
 ## (2/3) Add registry domain CA to trusted CA
 - name: Add registry domain CA to trusted CA dir
