feat(*): add playbooks and run.sh for deploy cluster (#8)
* chore(*): fix calico image repo typo and disable nodelocaldns

* feat(*): add playbooks and run.sh for deploy cluster

--- a/config/env.yml
+++ b/config/env.yml
@@ -14,8 +14,7 @@ etcd_deployment_type: host
 # Settings for etcd event server
 etcd_events_cluster_setup: true
 etcd_events_cluster_enabled: true
-
+offline_resources_enabled: true
 registry_ip: "172.20.0.25"
 registry_domain: "kube.registry.local"
-file_server_url: "http://172.20.0.25:8080"
-docker_mirrors_url: "https://mirrors.tuna.tsinghua.edu.cn/docker-ce/linux"
+offline_resources_url: "http://172.20.0.25:8080"
