--- a/config/env.yml
+++ b/config/env.yml
@@ -14,7 +14,13 @@ etcd_deployment_type: host
 # Settings for etcd event server
 etcd_events_cluster_setup: true
 etcd_events_cluster_enabled: true
+
+# enable offline deploy
 offline_resources_enabled: true
+
+# patch kubeadm version for ten years certs
+kubeadm_patch_enabled: true
+
 registry_ip: "172.20.0.25"
 registry_domain: "kube.registry.local"
 offline_resources_url: "http://172.20.0.25:8080"
