chore(*): support cilium CNI

--- a/config/group_vars/all/download.yml
+++ b/config/group_vars/all/download.yml
@@ -12,6 +12,7 @@ cni_version: "v0.9.1"
 helm_version: "v3.6.3"
 nerdctl_version: "0.8.1"
 etcd_version: "v3.4.13"
+cilium_version: "v1.9.10"
 kubeadm_patch_version: "{{ kube_version }}-patch-1.0"
 
 # Default calico addons version
@@ -64,6 +65,24 @@ calico_typha_image_tag: "{{ calico_typha_version }}{%- if image_arch != 'amd64' 
 calico_flexvol_image_repo: "{{ quay_image_repo }}/calico-pod2daemon-flexvol"
 calico_flexvol_image_tag: "{{ calico_flexvol_version }}{%- if image_arch != 'amd64' -%}-{{ image_arch }}{%- endif -%}"
 
+# Cilium image repo and tag
+cilium_image_repo: "{{ quay_image_repo }}/cilium-cilium"
+cilium_image_tag: "{{ cilium_version }}"
+cilium_init_image_repo: "{{ quay_image_repo }}/cilium-init"
+cilium_init_image_tag: "2019-04-05"
+cilium_operator_image_repo: "{{ quay_image_repo }}/cilium-operator"
+cilium_operator_image_tag: "{{ cilium_version }}"
+cilium_hubble_relay_image_repo: "{{ quay_image_repo }}/cilium-hubble-relay"
+cilium_hubble_relay_image_tag: "{{ cilium_version }}"
+cilium_hubble_certgen_image_repo: "{{ quay_image_repo }}/cilium-certgen"
+cilium_hubble_certgen_image_tag: "v0.1.3"
+cilium_hubble_ui_image_repo: "{{ quay_image_repo }}/cilium-hubble-ui"
+cilium_hubble_ui_image_tag: "v0.7.3"
+cilium_hubble_ui_backend_image_repo: "{{ quay_image_repo }}/cilium-hubble-ui-backend"
+cilium_hubble_ui_backend_image_tag: "v0.7.3"
+cilium_hubble_envoy_image_repo: "{{ docker_image_repo }}/envoyproxy-envoy"
+cilium_hubble_envoy_image_tag: "v1.14.5"
+
 flannel_image_repo: "{{ quay_image_repo }}/flannel"
 flannel_image_tag: "{{ flannel_version }}-{{ image_arch }}"
 
@@ -89,3 +108,11 @@ calico_cni_image_name: "{{ calico_cni_image_repo }}:{{ calico_cni_image_tag }}"
 calico_node_image_name: "{{ calico_node_image_repo }}:{{ calico_node_image_tag }}"
 calico_flexvol_image_name: "{{ calico_flexvol_image_repo }}:{{ calico_flexvol_image_tag }}"
 flannel_image_name: "{{ flannel_image_repo }}:{{ flannel_image_tag }}"
+cilium_image_name: "{{ cilium_image_repo }}:{{ cilium_image_tag }}"
+cilium_init_image_name: "{{ cilium_init_image_repo }}:{{ cilium_init_image_tag }}"
+cilium_operator_image_name: "{{ cilium_operator_image_repo }}:{{ cilium_operator_image_tag }}"
+cilium_hubble_relay_image_name: "{{ cilium_hubble_relay_image_repo }}:{{ cilium_hubble_relay_image_tag }}"
+cilium_hubble_certgen_image_name: "{{ cilium_hubble_certgen_image_repo }}:{{ cilium_hubble_certgen_image_tag }}"
+cilium_hubble_ui_image_name: "{{ cilium_hubble_ui_image_repo }}:{{ cilium_hubble_ui_image_tag }}"
+cilium_hubble_ui_backend_image_name: "{{ cilium_hubble_ui_backend_image_repo }}:{{ cilium_hubble_ui_backend_image_tag }}"
+cilium_hubble_envoy_image_name: "{{ cilium_hubble_envoy_image_repo }}:{{ cilium_hubble_envoy_image_tag }}"
