--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -78,7 +78,8 @@ jobs:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
           file: build/kubespray-files/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          # platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
           labels: FILES_MD5=${{ env.FILES_MD5 }}
